[package]
name = "json-updates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.1.1"
bson = "2.6.1"
dotenvy = "0.15.7"
